parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement_list -> statement_list statement
Rule 3     statement_list -> statement_list function_def
Rule 4     statement_list -> statement_list record_def
Rule 5     statement_list -> statement_list if_stmt
Rule 6     statement_list -> statement_list while_stmt
Rule 7     statement_list -> statement_list do_while_stmt
Rule 8     statement_list -> statement_list print_stmt
Rule 9     statement_list -> <empty>
Rule 10    record_def -> RECORD ID LPAREN field_list RPAREN SEMICOLON
Rule 11    field_list -> field_list COMMA field
Rule 12    field_list -> field
Rule 13    field -> type ID
Rule 14    field -> ID ID
Rule 15    function_def -> type ID LPAREN param_list RPAREN func_open stmt_block RBRACE
Rule 16    function_def -> VOID ID LPAREN param_list RPAREN func_open stmt_block RBRACE
Rule 17    function_def -> ID ID LPAREN param_list RPAREN func_open stmt_block RBRACE
Rule 18    func_open -> LBRACE
Rule 19    block_open -> LBRACE
Rule 20    param_list -> param_list COMMA param
Rule 21    param_list -> param
Rule 22    param_list -> <empty>
Rule 23    param -> type ID
Rule 24    param -> ID ID
Rule 25    stmt_block -> stmt_block inner_statement
Rule 26    stmt_block -> <empty>
Rule 27    inner_statement -> statement
Rule 28    inner_statement -> if_stmt
Rule 29    inner_statement -> while_stmt
Rule 30    inner_statement -> do_while_stmt
Rule 31    inner_statement -> break_stmt
Rule 32    inner_statement -> return_stmt
Rule 33    inner_statement -> print_stmt
Rule 34    statement -> decl_stmt SEMICOLON
Rule 35    statement -> assign_stmt SEMICOLON
Rule 36    statement -> expr SEMICOLON
Rule 37    statement -> SEMICOLON
Rule 38    decl_stmt -> type ID ASSIGN expr
Rule 39    decl_stmt -> type ID
Rule 40    decl_stmt -> type id_list
Rule 41    decl_stmt -> ID ID ASSIGN expr
Rule 42    decl_stmt -> ID ID
Rule 43    id_list -> id_list COMMA ID
Rule 44    id_list -> ID COMMA ID
Rule 45    assign_stmt -> lvalue ASSIGN expr
Rule 46    lvalue -> ID
Rule 47    lvalue -> lvalue DOT ID
Rule 48    type -> INT
Rule 49    type -> FLOAT
Rule 50    type -> CHAR
Rule 51    type -> BOOLEAN
Rule 52    if_stmt -> IF LPAREN expr RPAREN block_open stmt_block RBRACE
Rule 53    if_stmt -> IF LPAREN expr RPAREN block_open stmt_block RBRACE ELSE block_open stmt_block RBRACE
Rule 54    while_stmt -> WHILE LPAREN expr RPAREN block_open stmt_block RBRACE
Rule 55    do_while_stmt -> DO block_open stmt_block RBRACE WHILE LPAREN expr RPAREN
Rule 56    break_stmt -> BREAK SEMICOLON
Rule 57    return_stmt -> RETURN expr SEMICOLON
Rule 58    print_stmt -> PRINT LPAREN expr RPAREN SEMICOLON
Rule 59    expr -> expr PLUS expr
Rule 60    expr -> expr MINUS expr
Rule 61    expr -> expr MULT expr
Rule 62    expr -> expr DIV expr
Rule 63    expr -> expr GT expr
Rule 64    expr -> expr GE expr
Rule 65    expr -> expr LT expr
Rule 66    expr -> expr LE expr
Rule 67    expr -> expr EQ expr
Rule 68    expr -> expr AND expr
Rule 69    expr -> expr OR expr
Rule 70    expr -> MINUS expr
Rule 71    expr -> PLUS expr
Rule 72    expr -> NOT expr
Rule 73    expr -> LPAREN expr RPAREN
Rule 74    expr -> NEW ID LPAREN arg_list RPAREN
Rule 75    expr -> ID LPAREN arg_list RPAREN
Rule 76    expr -> lvalue
Rule 77    expr -> INT_VALUE
Rule 78    expr -> FLOAT_VALUE
Rule 79    expr -> CHAR_VALUE
Rule 80    expr -> TRUE
Rule 81    expr -> FALSE
Rule 82    arg_list -> arg_list COMMA expr
Rule 83    arg_list -> expr
Rule 84    arg_list -> <empty>

Terminals, with rules where they appear

AND                  : 68
ASSIGN               : 38 41 45
BOOLEAN              : 51
BREAK                : 56
CHAR                 : 50
CHAR_VALUE           : 79
COMMA                : 11 20 43 44 82
DIV                  : 62
DO                   : 55
DOT                  : 47
ELSE                 : 53
EQ                   : 67
FALSE                : 81
FLOAT                : 49
FLOAT_VALUE          : 78
GE                   : 64
GT                   : 63
ID                   : 10 13 14 14 15 16 17 17 23 24 24 38 39 41 41 42 42 43 44 44 46 47 74 75
IF                   : 52 53
INT                  : 48
INT_VALUE            : 77
LBRACE               : 18 19
LE                   : 66
LPAREN               : 10 15 16 17 52 53 54 55 58 73 74 75
LT                   : 65
MINUS                : 60 70
MULT                 : 61
NEW                  : 74
NOT                  : 72
OR                   : 69
PLUS                 : 59 71
PRINT                : 58
RBRACE               : 15 16 17 52 53 53 54 55
RECORD               : 10
RETURN               : 57
RPAREN               : 10 15 16 17 52 53 54 55 58 73 74 75
SEMICOLON            : 10 34 35 36 37 56 57 58
TRUE                 : 80
VOID                 : 16
WHILE                : 54 55
error                : 

Nonterminals, with rules where they appear

arg_list             : 74 75 82
assign_stmt          : 35
block_open           : 52 53 53 54 55
break_stmt           : 31
decl_stmt            : 34
do_while_stmt        : 7 30
expr                 : 36 38 41 45 52 53 54 55 57 58 59 59 60 60 61 61 62 62 63 63 64 64 65 65 66 66 67 67 68 68 69 69 70 71 72 73 82 83
field                : 11 12
field_list           : 10 11
func_open            : 15 16 17
function_def         : 3
id_list              : 40 43
if_stmt              : 5 28
inner_statement      : 25
lvalue               : 45 47 76
param                : 20 21
param_list           : 15 16 17 20
print_stmt           : 8 33
program              : 0
record_def           : 4
return_stmt          : 32
statement            : 2 27
statement_list       : 1 2 3 4 5 6 7 8
stmt_block           : 15 16 17 25 52 53 53 54 55
type                 : 13 15 23 38 39 40
while_stmt           : 6 29

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) statement_list -> . statement_list statement
    (3) statement_list -> . statement_list function_def
    (4) statement_list -> . statement_list record_def
    (5) statement_list -> . statement_list if_stmt
    (6) statement_list -> . statement_list while_stmt
    (7) statement_list -> . statement_list do_while_stmt
    (8) statement_list -> . statement_list print_stmt
    (9) statement_list -> .

    SEMICOLON       reduce using rule 9 (statement_list -> .)
    VOID            reduce using rule 9 (statement_list -> .)
    ID              reduce using rule 9 (statement_list -> .)
    RECORD          reduce using rule 9 (statement_list -> .)
    IF              reduce using rule 9 (statement_list -> .)
    WHILE           reduce using rule 9 (statement_list -> .)
    DO              reduce using rule 9 (statement_list -> .)
    PRINT           reduce using rule 9 (statement_list -> .)
    MINUS           reduce using rule 9 (statement_list -> .)
    PLUS            reduce using rule 9 (statement_list -> .)
    NOT             reduce using rule 9 (statement_list -> .)
    LPAREN          reduce using rule 9 (statement_list -> .)
    NEW             reduce using rule 9 (statement_list -> .)
    INT_VALUE       reduce using rule 9 (statement_list -> .)
    FLOAT_VALUE     reduce using rule 9 (statement_list -> .)
    CHAR_VALUE      reduce using rule 9 (statement_list -> .)
    TRUE            reduce using rule 9 (statement_list -> .)
    FALSE           reduce using rule 9 (statement_list -> .)
    INT             reduce using rule 9 (statement_list -> .)
    FLOAT           reduce using rule 9 (statement_list -> .)
    CHAR            reduce using rule 9 (statement_list -> .)
    BOOLEAN         reduce using rule 9 (statement_list -> .)
    $end            reduce using rule 9 (statement_list -> .)

    program                        shift and go to state 1
    statement_list                 shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .
    (2) statement_list -> statement_list . statement
    (3) statement_list -> statement_list . function_def
    (4) statement_list -> statement_list . record_def
    (5) statement_list -> statement_list . if_stmt
    (6) statement_list -> statement_list . while_stmt
    (7) statement_list -> statement_list . do_while_stmt
    (8) statement_list -> statement_list . print_stmt
    (34) statement -> . decl_stmt SEMICOLON
    (35) statement -> . assign_stmt SEMICOLON
    (36) statement -> . expr SEMICOLON
    (37) statement -> . SEMICOLON
    (15) function_def -> . type ID LPAREN param_list RPAREN func_open stmt_block RBRACE
    (16) function_def -> . VOID ID LPAREN param_list RPAREN func_open stmt_block RBRACE
    (17) function_def -> . ID ID LPAREN param_list RPAREN func_open stmt_block RBRACE
    (10) record_def -> . RECORD ID LPAREN field_list RPAREN SEMICOLON
    (52) if_stmt -> . IF LPAREN expr RPAREN block_open stmt_block RBRACE
    (53) if_stmt -> . IF LPAREN expr RPAREN block_open stmt_block RBRACE ELSE block_open stmt_block RBRACE
    (54) while_stmt -> . WHILE LPAREN expr RPAREN block_open stmt_block RBRACE
    (55) do_while_stmt -> . DO block_open stmt_block RBRACE WHILE LPAREN expr RPAREN
    (58) print_stmt -> . PRINT LPAREN expr RPAREN SEMICOLON
    (38) decl_stmt -> . type ID ASSIGN expr
    (39) decl_stmt -> . type ID
    (40) decl_stmt -> . type id_list
    (41) decl_stmt -> . ID ID ASSIGN expr
    (42) decl_stmt -> . ID ID
    (45) assign_stmt -> . lvalue ASSIGN expr
    (59) expr -> . expr PLUS expr
    (60) expr -> . expr MINUS expr
    (61) expr -> . expr MULT expr
    (62) expr -> . expr DIV expr
    (63) expr -> . expr GT expr
    (64) expr -> . expr GE expr
    (65) expr -> . expr LT expr
    (66) expr -> . expr LE expr
    (67) expr -> . expr EQ expr
    (68) expr -> . expr AND expr
    (69) expr -> . expr OR expr
    (70) expr -> . MINUS expr
    (71) expr -> . PLUS expr
    (72) expr -> . NOT expr
    (73) expr -> . LPAREN expr RPAREN
    (74) expr -> . NEW ID LPAREN arg_list RPAREN
    (75) expr -> . ID LPAREN arg_list RPAREN
    (76) expr -> . lvalue
    (77) expr -> . INT_VALUE
    (78) expr -> . FLOAT_VALUE
    (79) expr -> . CHAR_VALUE
    (80) expr -> . TRUE
    (81) expr -> . FALSE
    (48) type -> . INT
    (49) type -> . FLOAT
    (50) type -> . CHAR
    (51) type -> . BOOLEAN
    (46) lvalue -> . ID
    (47) lvalue -> . lvalue DOT ID

    $end            reduce using rule 1 (program -> statement_list .)
    SEMICOLON       shift and go to state 11
    VOID            shift and go to state 17
    ID              shift and go to state 15
    RECORD          shift and go to state 18
    IF              shift and go to state 19
    WHILE           shift and go to state 20
    DO              shift and go to state 21
    PRINT           shift and go to state 22
    MINUS           shift and go to state 25
    PLUS            shift and go to state 24
    NOT             shift and go to state 26
    LPAREN          shift and go to state 16
    NEW             shift and go to state 27
    INT_VALUE       shift and go to state 28
    FLOAT_VALUE     shift and go to state 29
    CHAR_VALUE      shift and go to state 30
    TRUE            shift and go to state 31
    FALSE           shift and go to state 32
    INT             shift and go to state 33
    FLOAT           shift and go to state 34
    CHAR            shift and go to state 35
    BOOLEAN         shift and go to state 36

    statement                      shift and go to state 3
    function_def                   shift and go to state 4
    record_def                     shift and go to state 5
    if_stmt                        shift and go to state 6
    while_stmt                     shift and go to state 7
    do_while_stmt                  shift and go to state 8
    print_stmt                     shift and go to state 9
    decl_stmt                      shift and go to state 10
    assign_stmt                    shift and go to state 12
    expr                           shift and go to state 13
    type                           shift and go to state 14
    lvalue                         shift and go to state 23

state 3

    (2) statement_list -> statement_list statement .

    SEMICOLON       reduce using rule 2 (statement_list -> statement_list statement .)
    VOID            reduce using rule 2 (statement_list -> statement_list statement .)
    ID              reduce using rule 2 (statement_list -> statement_list statement .)
    RECORD          reduce using rule 2 (statement_list -> statement_list statement .)
    IF              reduce using rule 2 (statement_list -> statement_list statement .)
    WHILE           reduce using rule 2 (statement_list -> statement_list statement .)
    DO              reduce using rule 2 (statement_list -> statement_list statement .)
    PRINT           reduce using rule 2 (statement_list -> statement_list statement .)
    MINUS           reduce using rule 2 (statement_list -> statement_list statement .)
    PLUS            reduce using rule 2 (statement_list -> statement_list statement .)
    NOT             reduce using rule 2 (statement_list -> statement_list statement .)
    LPAREN          reduce using rule 2 (statement_list -> statement_list statement .)
    NEW             reduce using rule 2 (statement_list -> statement_list statement .)
    INT_VALUE       reduce using rule 2 (statement_list -> statement_list statement .)
    FLOAT_VALUE     reduce using rule 2 (statement_list -> statement_list statement .)
    CHAR_VALUE      reduce using rule 2 (statement_list -> statement_list statement .)
    TRUE            reduce using rule 2 (statement_list -> statement_list statement .)
    FALSE           reduce using rule 2 (statement_list -> statement_list statement .)
    INT             reduce using rule 2 (statement_list -> statement_list statement .)
    FLOAT           reduce using rule 2 (statement_list -> statement_list statement .)
    CHAR            reduce using rule 2 (statement_list -> statement_list statement .)
    BOOLEAN         reduce using rule 2 (statement_list -> statement_list statement .)
    $end            reduce using rule 2 (statement_list -> statement_list statement .)


state 4

    (3) statement_list -> statement_list function_def .

    SEMICOLON       reduce using rule 3 (statement_list -> statement_list function_def .)
    VOID            reduce using rule 3 (statement_list -> statement_list function_def .)
    ID              reduce using rule 3 (statement_list -> statement_list function_def .)
    RECORD          reduce using rule 3 (statement_list -> statement_list function_def .)
    IF              reduce using rule 3 (statement_list -> statement_list function_def .)
    WHILE           reduce using rule 3 (statement_list -> statement_list function_def .)
    DO              reduce using rule 3 (statement_list -> statement_list function_def .)
    PRINT           reduce using rule 3 (statement_list -> statement_list function_def .)
    MINUS           reduce using rule 3 (statement_list -> statement_list function_def .)
    PLUS            reduce using rule 3 (statement_list -> statement_list function_def .)
    NOT             reduce using rule 3 (statement_list -> statement_list function_def .)
    LPAREN          reduce using rule 3 (statement_list -> statement_list function_def .)
    NEW             reduce using rule 3 (statement_list -> statement_list function_def .)
    INT_VALUE       reduce using rule 3 (statement_list -> statement_list function_def .)
    FLOAT_VALUE     reduce using rule 3 (statement_list -> statement_list function_def .)
    CHAR_VALUE      reduce using rule 3 (statement_list -> statement_list function_def .)
    TRUE            reduce using rule 3 (statement_list -> statement_list function_def .)
    FALSE           reduce using rule 3 (statement_list -> statement_list function_def .)
    INT             reduce using rule 3 (statement_list -> statement_list function_def .)
    FLOAT           reduce using rule 3 (statement_list -> statement_list function_def .)
    CHAR            reduce using rule 3 (statement_list -> statement_list function_def .)
    BOOLEAN         reduce using rule 3 (statement_list -> statement_list function_def .)
    $end            reduce using rule 3 (statement_list -> statement_list function_def .)


state 5

    (4) statement_list -> statement_list record_def .

    SEMICOLON       reduce using rule 4 (statement_list -> statement_list record_def .)
    VOID            reduce using rule 4 (statement_list -> statement_list record_def .)
    ID              reduce using rule 4 (statement_list -> statement_list record_def .)
    RECORD          reduce using rule 4 (statement_list -> statement_list record_def .)
    IF              reduce using rule 4 (statement_list -> statement_list record_def .)
    WHILE           reduce using rule 4 (statement_list -> statement_list record_def .)
    DO              reduce using rule 4 (statement_list -> statement_list record_def .)
    PRINT           reduce using rule 4 (statement_list -> statement_list record_def .)
    MINUS           reduce using rule 4 (statement_list -> statement_list record_def .)
    PLUS            reduce using rule 4 (statement_list -> statement_list record_def .)
    NOT             reduce using rule 4 (statement_list -> statement_list record_def .)
    LPAREN          reduce using rule 4 (statement_list -> statement_list record_def .)
    NEW             reduce using rule 4 (statement_list -> statement_list record_def .)
    INT_VALUE       reduce using rule 4 (statement_list -> statement_list record_def .)
    FLOAT_VALUE     reduce using rule 4 (statement_list -> statement_list record_def .)
    CHAR_VALUE      reduce using rule 4 (statement_list -> statement_list record_def .)
    TRUE            reduce using rule 4 (statement_list -> statement_list record_def .)
    FALSE           reduce using rule 4 (statement_list -> statement_list record_def .)
    INT             reduce using rule 4 (statement_list -> statement_list record_def .)
    FLOAT           reduce using rule 4 (statement_list -> statement_list record_def .)
    CHAR            reduce using rule 4 (statement_list -> statement_list record_def .)
    BOOLEAN         reduce using rule 4 (statement_list -> statement_list record_def .)
    $end            reduce using rule 4 (statement_list -> statement_list record_def .)


state 6

    (5) statement_list -> statement_list if_stmt .

    SEMICOLON       reduce using rule 5 (statement_list -> statement_list if_stmt .)
    VOID            reduce using rule 5 (statement_list -> statement_list if_stmt .)
    ID              reduce using rule 5 (statement_list -> statement_list if_stmt .)
    RECORD          reduce using rule 5 (statement_list -> statement_list if_stmt .)
    IF              reduce using rule 5 (statement_list -> statement_list if_stmt .)
    WHILE           reduce using rule 5 (statement_list -> statement_list if_stmt .)
    DO              reduce using rule 5 (statement_list -> statement_list if_stmt .)
    PRINT           reduce using rule 5 (statement_list -> statement_list if_stmt .)
    MINUS           reduce using rule 5 (statement_list -> statement_list if_stmt .)
    PLUS            reduce using rule 5 (statement_list -> statement_list if_stmt .)
    NOT             reduce using rule 5 (statement_list -> statement_list if_stmt .)
    LPAREN          reduce using rule 5 (statement_list -> statement_list if_stmt .)
    NEW             reduce using rule 5 (statement_list -> statement_list if_stmt .)
    INT_VALUE       reduce using rule 5 (statement_list -> statement_list if_stmt .)
    FLOAT_VALUE     reduce using rule 5 (statement_list -> statement_list if_stmt .)
    CHAR_VALUE      reduce using rule 5 (statement_list -> statement_list if_stmt .)
    TRUE            reduce using rule 5 (statement_list -> statement_list if_stmt .)
    FALSE           reduce using rule 5 (statement_list -> statement_list if_stmt .)
    INT             reduce using rule 5 (statement_list -> statement_list if_stmt .)
    FLOAT           reduce using rule 5 (statement_list -> statement_list if_stmt .)
    CHAR            reduce using rule 5 (statement_list -> statement_list if_stmt .)
    BOOLEAN         reduce using rule 5 (statement_list -> statement_list if_stmt .)
    $end            reduce using rule 5 (statement_list -> statement_list if_stmt .)


state 7

    (6) statement_list -> statement_list while_stmt .

    SEMICOLON       reduce using rule 6 (statement_list -> statement_list while_stmt .)
    VOID            reduce using rule 6 (statement_list -> statement_list while_stmt .)
    ID              reduce using rule 6 (statement_list -> statement_list while_stmt .)
    RECORD          reduce using rule 6 (statement_list -> statement_list while_stmt .)
    IF              reduce using rule 6 (statement_list -> statement_list while_stmt .)
    WHILE           reduce using rule 6 (statement_list -> statement_list while_stmt .)
    DO              reduce using rule 6 (statement_list -> statement_list while_stmt .)
    PRINT           reduce using rule 6 (statement_list -> statement_list while_stmt .)
    MINUS           reduce using rule 6 (statement_list -> statement_list while_stmt .)
    PLUS            reduce using rule 6 (statement_list -> statement_list while_stmt .)
    NOT             reduce using rule 6 (statement_list -> statement_list while_stmt .)
    LPAREN          reduce using rule 6 (statement_list -> statement_list while_stmt .)
    NEW             reduce using rule 6 (statement_list -> statement_list while_stmt .)
    INT_VALUE       reduce using rule 6 (statement_list -> statement_list while_stmt .)
    FLOAT_VALUE     reduce using rule 6 (statement_list -> statement_list while_stmt .)
    CHAR_VALUE      reduce using rule 6 (statement_list -> statement_list while_stmt .)
    TRUE            reduce using rule 6 (statement_list -> statement_list while_stmt .)
    FALSE           reduce using rule 6 (statement_list -> statement_list while_stmt .)
    INT             reduce using rule 6 (statement_list -> statement_list while_stmt .)
    FLOAT           reduce using rule 6 (statement_list -> statement_list while_stmt .)
    CHAR            reduce using rule 6 (statement_list -> statement_list while_stmt .)
    BOOLEAN         reduce using rule 6 (statement_list -> statement_list while_stmt .)
    $end            reduce using rule 6 (statement_list -> statement_list while_stmt .)


state 8

    (7) statement_list -> statement_list do_while_stmt .

    SEMICOLON       reduce using rule 7 (statement_list -> statement_list do_while_stmt .)
    VOID            reduce using rule 7 (statement_list -> statement_list do_while_stmt .)
    ID              reduce using rule 7 (statement_list -> statement_list do_while_stmt .)
    RECORD          reduce using rule 7 (statement_list -> statement_list do_while_stmt .)
    IF              reduce using rule 7 (statement_list -> statement_list do_while_stmt .)
    WHILE           reduce using rule 7 (statement_list -> statement_list do_while_stmt .)
    DO              reduce using rule 7 (statement_list -> statement_list do_while_stmt .)
    PRINT           reduce using rule 7 (statement_list -> statement_list do_while_stmt .)
    MINUS           reduce using rule 7 (statement_list -> statement_list do_while_stmt .)
    PLUS            reduce using rule 7 (statement_list -> statement_list do_while_stmt .)
    NOT             reduce using rule 7 (statement_list -> statement_list do_while_stmt .)
    LPAREN          reduce using rule 7 (statement_list -> statement_list do_while_stmt .)
    NEW             reduce using rule 7 (statement_list -> statement_list do_while_stmt .)
    INT_VALUE       reduce using rule 7 (statement_list -> statement_list do_while_stmt .)
    FLOAT_VALUE     reduce using rule 7 (statement_list -> statement_list do_while_stmt .)
    CHAR_VALUE      reduce using rule 7 (statement_list -> statement_list do_while_stmt .)
    TRUE            reduce using rule 7 (statement_list -> statement_list do_while_stmt .)
    FALSE           reduce using rule 7 (statement_list -> statement_list do_while_stmt .)
    INT             reduce using rule 7 (statement_list -> statement_list do_while_stmt .)
    FLOAT           reduce using rule 7 (statement_list -> statement_list do_while_stmt .)
    CHAR            reduce using rule 7 (statement_list -> statement_list do_while_stmt .)
    BOOLEAN         reduce using rule 7 (statement_list -> statement_list do_while_stmt .)
    $end            reduce using rule 7 (statement_list -> statement_list do_while_stmt .)


state 9

    (8) statement_list -> statement_list print_stmt .

    SEMICOLON       reduce using rule 8 (statement_list -> statement_list print_stmt .)
    VOID            reduce using rule 8 (statement_list -> statement_list print_stmt .)
    ID              reduce using rule 8 (statement_list -> statement_list print_stmt .)
    RECORD          reduce using rule 8 (statement_list -> statement_list print_stmt .)
    IF              reduce using rule 8 (statement_list -> statement_list print_stmt .)
    WHILE           reduce using rule 8 (statement_list -> statement_list print_stmt .)
    DO              reduce using rule 8 (statement_list -> statement_list print_stmt .)
    PRINT           reduce using rule 8 (statement_list -> statement_list print_stmt .)
    MINUS           reduce using rule 8 (statement_list -> statement_list print_stmt .)
    PLUS            reduce using rule 8 (statement_list -> statement_list print_stmt .)
    NOT             reduce using rule 8 (statement_list -> statement_list print_stmt .)
    LPAREN          reduce using rule 8 (statement_list -> statement_list print_stmt .)
    NEW             reduce using rule 8 (statement_list -> statement_list print_stmt .)
    INT_VALUE       reduce using rule 8 (statement_list -> statement_list print_stmt .)
    FLOAT_VALUE     reduce using rule 8 (statement_list -> statement_list print_stmt .)
    CHAR_VALUE      reduce using rule 8 (statement_list -> statement_list print_stmt .)
    TRUE            reduce using rule 8 (statement_list -> statement_list print_stmt .)
    FALSE           reduce using rule 8 (statement_list -> statement_list print_stmt .)
    INT             reduce using rule 8 (statement_list -> statement_list print_stmt .)
    FLOAT           reduce using rule 8 (statement_list -> statement_list print_stmt .)
    CHAR            reduce using rule 8 (statement_list -> statement_list print_stmt .)
    BOOLEAN         reduce using rule 8 (statement_list -> statement_list print_stmt .)
    $end            reduce using rule 8 (statement_list -> statement_list print_stmt .)


state 10

    (34) statement -> decl_stmt . SEMICOLON

    SEMICOLON       shift and go to state 37


state 11

    (37) statement -> SEMICOLON .

    SEMICOLON       reduce using rule 37 (statement -> SEMICOLON .)
    VOID            reduce using rule 37 (statement -> SEMICOLON .)
    ID              reduce using rule 37 (statement -> SEMICOLON .)
    RECORD          reduce using rule 37 (statement -> SEMICOLON .)
    IF              reduce using rule 37 (statement -> SEMICOLON .)
    WHILE           reduce using rule 37 (statement -> SEMICOLON .)
    DO              reduce using rule 37 (statement -> SEMICOLON .)
    PRINT           reduce using rule 37 (statement -> SEMICOLON .)
    MINUS           reduce using rule 37 (statement -> SEMICOLON .)
    PLUS            reduce using rule 37 (statement -> SEMICOLON .)
    NOT             reduce using rule 37 (statement -> SEMICOLON .)
    LPAREN          reduce using rule 37 (statement -> SEMICOLON .)
    NEW             reduce using rule 37 (statement -> SEMICOLON .)
    INT_VALUE       reduce using rule 37 (statement -> SEMICOLON .)
    FLOAT_VALUE     reduce using rule 37 (statement -> SEMICOLON .)
    CHAR_VALUE      reduce using rule 37 (statement -> SEMICOLON .)
    TRUE            reduce using rule 37 (statement -> SEMICOLON .)
    FALSE           reduce using rule 37 (statement -> SEMICOLON .)
    INT             reduce using rule 37 (statement -> SEMICOLON .)
    FLOAT           reduce using rule 37 (statement -> SEMICOLON .)
    CHAR            reduce using rule 37 (statement -> SEMICOLON .)
    BOOLEAN         reduce using rule 37 (statement -> SEMICOLON .)
    $end            reduce using rule 37 (statement -> SEMICOLON .)
    RBRACE          reduce using rule 37 (statement -> SEMICOLON .)
    BREAK           reduce using rule 37 (statement -> SEMICOLON .)
    RETURN          reduce using rule 37 (statement -> SEMICOLON .)


state 12

    (35) statement -> assign_stmt . SEMICOLON

    SEMICOLON       shift and go to state 38


state 13

    (36) statement -> expr . SEMICOLON
    (59) expr -> expr . PLUS expr
    (60) expr -> expr . MINUS expr
    (61) expr -> expr . MULT expr
    (62) expr -> expr . DIV expr
    (63) expr -> expr . GT expr
    (64) expr -> expr . GE expr
    (65) expr -> expr . LT expr
    (66) expr -> expr . LE expr
    (67) expr -> expr . EQ expr
    (68) expr -> expr . AND expr
    (69) expr -> expr . OR expr

    SEMICOLON       shift and go to state 39
    PLUS            shift and go to state 40
    MINUS           shift and go to state 41
    MULT            shift and go to state 42
    DIV             shift and go to state 43
    GT              shift and go to state 44
    GE              shift and go to state 45
    LT              shift and go to state 46
    LE              shift and go to state 47
    EQ              shift and go to state 48
    AND             shift and go to state 49
    OR              shift and go to state 50


state 14

    (15) function_def -> type . ID LPAREN param_list RPAREN func_open stmt_block RBRACE
    (38) decl_stmt -> type . ID ASSIGN expr
    (39) decl_stmt -> type . ID
    (40) decl_stmt -> type . id_list
    (43) id_list -> . id_list COMMA ID
    (44) id_list -> . ID COMMA ID

    ID              shift and go to state 51

    id_list                        shift and go to state 52

state 15

    (17) function_def -> ID . ID LPAREN param_list RPAREN func_open stmt_block RBRACE
    (41) decl_stmt -> ID . ID ASSIGN expr
    (42) decl_stmt -> ID . ID
    (75) expr -> ID . LPAREN arg_list RPAREN
    (46) lvalue -> ID .

    ID              shift and go to state 53
    LPAREN          shift and go to state 54
    ASSIGN          reduce using rule 46 (lvalue -> ID .)
    DOT             reduce using rule 46 (lvalue -> ID .)
    SEMICOLON       reduce using rule 46 (lvalue -> ID .)
    PLUS            reduce using rule 46 (lvalue -> ID .)
    MINUS           reduce using rule 46 (lvalue -> ID .)
    MULT            reduce using rule 46 (lvalue -> ID .)
    DIV             reduce using rule 46 (lvalue -> ID .)
    GT              reduce using rule 46 (lvalue -> ID .)
    GE              reduce using rule 46 (lvalue -> ID .)
    LT              reduce using rule 46 (lvalue -> ID .)
    LE              reduce using rule 46 (lvalue -> ID .)
    EQ              reduce using rule 46 (lvalue -> ID .)
    AND             reduce using rule 46 (lvalue -> ID .)
    OR              reduce using rule 46 (lvalue -> ID .)


state 16

    (73) expr -> LPAREN . expr RPAREN
    (59) expr -> . expr PLUS expr
    (60) expr -> . expr MINUS expr
    (61) expr -> . expr MULT expr
    (62) expr -> . expr DIV expr
    (63) expr -> . expr GT expr
    (64) expr -> . expr GE expr
    (65) expr -> . expr LT expr
    (66) expr -> . expr LE expr
    (67) expr -> . expr EQ expr
    (68) expr -> . expr AND expr
    (69) expr -> . expr OR expr
    (70) expr -> . MINUS expr
    (71) expr -> . PLUS expr
    (72) expr -> . NOT expr
    (73) expr -> . LPAREN expr RPAREN
    (74) expr -> . NEW ID LPAREN arg_list RPAREN
    (75) expr -> . ID LPAREN arg_list RPAREN
    (76) expr -> . lvalue
    (77) expr -> . INT_VALUE
    (78) expr -> . FLOAT_VALUE
    (79) expr -> . CHAR_VALUE
    (80) expr -> . TRUE
    (81) expr -> . FALSE
    (46) lvalue -> . ID
    (47) lvalue -> . lvalue DOT ID

    MINUS           shift and go to state 25
    PLUS            shift and go to state 24
    NOT             shift and go to state 26
    LPAREN          shift and go to state 16
    NEW             shift and go to state 27
    ID              shift and go to state 56
    INT_VALUE       shift and go to state 28
    FLOAT_VALUE     shift and go to state 29
    CHAR_VALUE      shift and go to state 30
    TRUE            shift and go to state 31
    FALSE           shift and go to state 32

    expr                           shift and go to state 55
    lvalue                         shift and go to state 57

state 17

    (16) function_def -> VOID . ID LPAREN param_list RPAREN func_open stmt_block RBRACE

    ID              shift and go to state 58


state 18

    (10) record_def -> RECORD . ID LPAREN field_list RPAREN SEMICOLON

    ID              shift and go to state 59


state 19

    (52) if_stmt -> IF . LPAREN expr RPAREN block_open stmt_block RBRACE
    (53) if_stmt -> IF . LPAREN expr RPAREN block_open stmt_block RBRACE ELSE block_open stmt_block RBRACE

    LPAREN          shift and go to state 60


state 20

    (54) while_stmt -> WHILE . LPAREN expr RPAREN block_open stmt_block RBRACE

    LPAREN          shift and go to state 61


state 21

    (55) do_while_stmt -> DO . block_open stmt_block RBRACE WHILE LPAREN expr RPAREN
    (19) block_open -> . LBRACE

    LBRACE          shift and go to state 63

    block_open                     shift and go to state 62

state 22

    (58) print_stmt -> PRINT . LPAREN expr RPAREN SEMICOLON

    LPAREN          shift and go to state 64


state 23

    (45) assign_stmt -> lvalue . ASSIGN expr
    (76) expr -> lvalue .
    (47) lvalue -> lvalue . DOT ID
